# XSStrike

./: Dockerfile  MANIFEST.in  README.md  pyproject.toml  setup.py  xsstrike.py
core/: utils.py  wafDetector.py
