[project]
name = "xsstrike"
version = "3.1.7"
description = "Advanced XSS Detection Suite"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "fuzzywuzzy>=0.18.0",
    "requests>=2.32.5",
    "rich>=14.2.0",
    "setuptools>=80.9.0",
    "tld>=0.13.1",
]

[project.scripts]
xsstrike = "xsstrike:main"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"
